updated derivative tutorial

--- a/tensor_tutorial.ipynb
+++ b/tensor_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +30,15 @@
        "'torch.IntTensor'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 1D Tensor \n",
     "pt = torch.tensor([1,2.0,3,4,5,5], dtype=torch.int32) # create with pytorch constructor method\n",
+    "pt2d = torch.tensor([[1,2,3,-1],[4,5,6,-2],[7,8,9,-3]]) # each sublist becomes a row in the 2D tensor \n",
     "pt = torch.FloatTensor([1,2.0,3,4,5,5]) # create with pytorch constructor method\n",
     "pt2 = pt.type(torch.int32) # convert data type using type method\n",
     "pt.dtype # type of data stored\n",
@@ -46,7 +48,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 4])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pt2d.ndimension()\n",
+    "print(pt2d.shape) # row column\n",
+    "pt2d.numel() # number of elements\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +134,7 @@
        "array([ 12,  20,  30, 100,  50])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +159,7 @@
        "[5, 10, 15, 20]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,20 +178,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### indexing a tensor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tensor_2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_n/49bybjyn5514sjpnd9qf40pr0000gn/T/ipykernel_43481/3766691015.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# each element in a tensor is also a tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtensor_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# get just the number from the tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtensor_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# list indexing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'tensor_2' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([ 7,  8,  9, -3])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,12 +206,17 @@
     "# get just the number from the tensor\n",
     "tensor_2[0].item()\n",
     "# list indexing \n",
-    "tensor_2[1:4] # do not counts element corresponding to last index "
+    "tensor_2[1:4] # do not counts element corresponding to last index \n",
+    "pt2d[0][1].item() #2d row 0 column 1 \n",
+    "pt2d[0,1].item() #2d row 0 column 1 indexing\n",
+    "pt2d[:,1] # column 1\n",
+    "pt2d[0,:] # first row\n",
+    "pt2d[-1,:] # last row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +225,7 @@
        "tensor([-0.9589, -0.5440,  0.6503,  0.9129])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,16 +248,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = torch.tensor([[1,2,3,-1],[4,5,6,-2],[7,8,9,-3]])\n",
+    "B = A + 10 # element wise (output matrix same shape)\n",
+    "Z = A+B # element wise (output matrix same shape)\n",
+    "Z2 = A*B # element wise (output matrix same shape)\n",
+    "Z3 = torch.mm(Z.t(),Z) # matrix multiplication column dimension must match row dimension] [m1xn1][m2xn2] n1=m2 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z.t()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1434ff0f0>]"
+       "tensor([[1044, 1152, 1260,  300],\n",
+       "        [1152, 1272, 1392,  336],\n",
+       "        [1260, 1392, 1524,  372],\n",
+       "        [ 300,  336,  372,  116]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.mm(Z.t(),Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u = torch.tensor([1,2])\n",
+    "v = torch.tensor([0,1])\n",
+    "torch.dot(u,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x146dfab70>]"
+      ]
+     },
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,147 +349,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 5, 10, 15, 20])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor_2    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = tensor_2.tolist()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[0] = 12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'Data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_n/49bybjyn5514sjpnd9qf40pr0000gn/T/ipykernel_43481/2674420281.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[0;31m# attributes that holds derivative for x once calculated\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mData\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'Data'"
-     ]
-    }
-   ],
-   "source": [
-    "# pytorch takes derivatives by making a backward graph\n",
-    "x=torch.tensor(2.0,requires_grad=True)\n",
-    "y=x**2\n",
-    "y.backward() \n",
-    "y\n",
-    "x.grad # attributes that holds derivative for x once calculated\n",
-    "x.is_leaf # is a leaf in graph\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Taking a derivative with pytorch "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(6.)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x=torch.tensor(2.0,requires_grad=True)\n",
-    "z = x**2 + 2*x + 1\n",
-    "dz = 2*x + 2\n",
-    "z.backward()\n",
-    "x.grad\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Taking a Partial Derivative with Pytorch"
+    "a=torch.tensor([[0,1,1],[1,0,1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.size()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(4.)"
+       "2"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "# point you are finding the slope around\n",
-    "u = torch.tensor(1.0,requires_grad=True)\n",
-    "v = torch.tensor(2.0,requires_grad=True)\n",
-    "# point is on this surface \n",
-    "f = u*v + u**2 \n",
-    "# manually calculate partial deriative equation\n",
-    "dfu = v + 2*u \n",
-    "dfv = u \n",
-    "# pytorch calculates partial deriatives at that point\n",
-    "f.backward()\n",
-    "# check output \n",
-    "print('the output is ')\n",
-    "v.grad\n",
-    "u.grad\n",
-    "\n",
-    "\n"
+    "a.ndimension()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 2],\n",
+      "        [0, 2]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = torch.tensor([[0,1,1],[1,0,1]])\n",
+    "B = torch.tensor([[1,1],[1,1],[-1,1]])\n",
+    "A_x_B = torch.mm(A,B)\n",
+    "print(A_x_B)"
    ]
   }
  ],
